@@ -1,10 +1,8 @@
 ;;; build-report.el --- Automatically formatted build reports for XEmacs
 
-;; Copyright (C) 1997 Adrian Aichner
+;; Copyright (C) 1997-2001 Adrian Aichner
 
 ;; Author: Adrian Aichner <adrian@xemacs.org>
-;; Date: Sun., Apr. 20, 1997-2000.
-;; Version: $Revision: 1.9 $
 ;; Keywords: internal
 
 ;; This file is part of XEmacs.
@@ -164,7 +162,7 @@ may use following alias
 
 alias mk 'make \!* >>&\! \!$.err &'
 
-under csh, so that you get beta.err went you run `mk beta'."
+under csh, so that you get beta.err when you run `mk beta'."
   :type '(repeat
           :custom-show t
           :documentation-shown t
